--- a/major_midterm_report/midterm_report.tex
+++ b/major_midterm_report/midterm_report.tex
@@ -246,9 +246,10 @@
       \subsection{Problems}
       \subsection{Issues}
       \subsection{Possible solutions}
-      \subsubsection{Recommendation}
+  %    \subsubsection{Recommendation}
   %    \subsubsection{Assignment of responsibility}
   %    \subsubsection{Deadline}
+      \clearpage
       \section{Task to be completed in Future}
 	\begin{center}
 		\begin{tabular}{|c|l|c|c|}
