--- a/major_midterm_report/midterm_report.tex
+++ b/major_midterm_report/midterm_report.tex
@@ -30,9 +30,9 @@
         {\large\scshape Submitted by:}\\
         \vspace{0.2cm}
         {
-          {\normalsize\verb+Nabin Bhattarai(070/BCT/522)+}\\
-          \vspace{0.1cm}
           {\normalsize\verb+Miran Ghimire(070/BCT/521)+}\\
+          \vspace{0.1cm}
+          {\normalsize\verb+Nabin Bhattarai(070/BCT/522)+}\\
           \vspace{0.1cm}
           {\normalsize\verb+Brihat Ratna Bajracharya(070/BCT/513)+}\\
           \vspace{0.1cm}
@@ -286,6 +286,9 @@
 	      \caption{sample of output of a project}
 	\end{figure}
 	\subsection{Accuracy}
+	\subsubsection{Overfitting}
+	In order to remove the overfitting of data set into the real world application $k^{th}$ fold cross validation technique was used. \\
+	Within our program $5^{th}$ fold cross validation technique was used under which data set was divided into train set and test set 5 times in which first train and test set consisted of first 80\% and 20\% of data and second consisted of second 80\% and 20\% respectively and so on.
       \begin{figure}[h!]
 	      \centering
 	      \includegraphics[width=200px]{accuracy.png}
