Major Project Report Latex

--- a/major_midterm_report/midterm_report.tex
+++ b/major_midterm_report/midterm_report.tex
@@ -32,12 +32,12 @@
         {
           {\normalsize\verb+Miran Ghimire(070/BCT/521)+}\\
           \vspace{0.1cm}
-          {\normalsize\verb+Nabin Bhattarai(070/BCT/522)+}\\
-          \vspace{0.1cm}
-          {\normalsize\verb+Brihat Ratna Bajracharya(070/BCT/513)+}\\
-          \vspace{0.1cm}
-          {\normalsize\verb+Abhishek Paudel(070/BCT/502)+}\\
-          \vspace{0.1cm}
+         {\normalsize\verb+Nabin Bhattarai(070/BCT/522)+}\\
+         \vspace{0.1cm}
+         {\normalsize\verb+Brihat Ratna Bajracharya(070/BCT/513)+}\\
+         \vspace{0.1cm}
+        {\normalsize\verb+Abhishek Paudel(070/BCT/502)+}\\
+         \vspace{0.1cm}
         }
         \vspace{1cm}
         {\large\scshape Supervised By}\\
@@ -50,8 +50,15 @@
           {\normalsize\verb+Electronics and Computer Engineering+}
           \vspace{0.1cm}
         }
-        
-        \vspace{1cm}
+\vspace{1cm}
+%\\
+%{\large\scshape Submitted To}\\
+%\vspace{0.2cm}
+%{
+%  {\normalsize \verb+Naresh Maharjan+\par}
+%  \vspace{0.1cm}
+%  {\normalsize \verb+Leapfrog Technology+\par}
+% }
         \vfill
 
         % Bottom of the page
