--- a/major_project_report/main.tex
+++ b/major_project_report/main.tex
@@ -1,9 +1,11 @@
 \documentclass[a4paper,12pt,onepage]{article}
 \usepackage{report}
-
+\usepackage[acronym]{glossaries}
 \title{Major Project Report}
 \author{Miran Ghimire}
 \date{\today}
+
+
 
 \begin{document}
 \pagenumbering{roman} % roman page numbers
@@ -34,7 +36,7 @@
 \listoftables \addcontentsline{toc}{section}{List of Tables}
 
 
-%\input{sec/logistic-regression}
+\input{sec/logistic-regression}
 \input{sec/introduction}
 \input{sec/literature_review}
 \input{sec/theoretical_background}
