--- a/major_project_report/sec/acknowledgment.tex
+++ b/major_project_report/sec/acknowledgment.tex
@@ -2,7 +2,7 @@
 % Acknowledgments
 
 \newpage
-\section*{Acknowledgments}
+\section*{ACKNOWLEDGMENT}
 \addcontentsline{toc}{section}{Acknowledgments}
 
 This is the Acknowledgments page.
