--- a/major_project_report/sec/literature_review.tex
+++ b/major_project_report/sec/literature_review.tex
@@ -1,3 +1,15 @@
 \newpage
 \section{LITERATURE REVIEW}
+Recommender System is a rich problem research area. It has abundant practical applications also defined as systems which promote recommedation of people(normally seen as service provider) as well as promote recommendation of products/services.In computers, Recommender Systems begin to appear in 90's, theyare applications that provide personalized advice for users about products or services they might be interested in \cite{resnick}.
 
+In 2005, Gonzalez \cite{gonzalez} proposed a first model based on psychological aspects, he uses Emotional Intelligence to improve on-line course recommendations.
+
+In 2008, Recommender System based on personality traits \cite{nunes} was published, experimenting on recommender system with the personality. The bascialy tired to recommend a person, in a voting scnario. Here recommendation was based on those psychological aspect of candidates and an imaginary personagewho person dreamt as ideal candidate. System used 30 facets of big 5 personality traits and only big 5 personality traits as the pshychological measuresof the users.
+
+In 2014, Improving Music Recommendeer System. What can we learn from research on music tastes? \cite{laplante} was published which discuss about the music tastes from psychological point of view and uses psyschology of music to identify the correlates of music tastes and to understand how music tastes are formed and evolve through time. It reveals the importance of social influences on muisci tastes and provides a basic suggestion for the design of music recommender system.
+
+Also in 2014, Enchancing Music Recommnder System with Personality Information andEmotional States \cite{bruce} was published, that researches to improve the music recommendation by including personality and emotional states. The proposal offers a great insight on how a recommendation engine can be improved with the personality via the series of steps.
+
+In 2016, A Comparative Analysis of Personality Based Music Recommendation System \cite{melissa} was published which describes a preliminary study on considering information about the target user's personality in music recommendation system. It proposes a five different kind of models for the personality based music recommendation system.
+
+In this project, we are continuing with the experimentation of A ComparativeAnalysis of Personality Based Music Recommendation System whereby, we tried to study the effect of personality based system on collaborative filtering.
