--- a/major_project_report/sec/references.tex
+++ b/major_project_report/sec/references.tex
@@ -4,6 +4,56 @@
 \addcontentsline{toc}{section}{References}
 \begin{thebibliography}{9}
 
+ \bibitem{fivefactormodel}
+	 Five Factor Model of Personality: Goldberg LR, et al.(2006) \textit{The international personality item pool and the future of pulic-domain personality measures J Res Pers}, 40(1):8486.
+ 
+ \bibitem{tupes}
+ E. Tupes and R. Christal Recurrent personality factors based on trait ratings.(1992) \textit{Journal of Personality}, 60(2): 225251.
+
+ \bibitem{mccrae}
+ R. McCrae and O. John. An introduction to the five-factor model and its applications.(1992)\textit{Journal of Personality}, 60(2): 175215.
+
+ \bibitem{laplante}
+ L. Audery. Improving music recommender systems: What can we learn from research on music tastes?(2014)\textit{ISMIR}.
+
+ \bibitem{bruce}
+ B. Ferwerda and S. Markus. Enhancing Music Recommender Systems with Personality Information and Emotional States: A Propoasal.(2014)\textit{UMAP Workshops}.
+
+ \bibitem{melissa}
+	 O. Melissa, A. Micareli and G. Sansonetti. A Comparative Analysis of Personaility Based Music Recommender Systems. \textit{EMPIRE RecSys}, 2016
+
+ \bibitem{gonzalez}
+ G. Gonzalez and M. Miquel. Embedding Emotional Context in Recommendation System.(2007)\textit{20th International Florida Artifical Intelligence Research Society Conference-FLAIRS}.
+
+ \bibitem{resnick}
+ P.Resnick and H.R. Vairan. Recommender Systems.(1997) \textit{Communications of the ACM}, 40(3):56-58.
+
+ \bibitem{nunes}
+Nunes, M.A.S.N(2008). \textit{Recommender system based on personality traits}
+\bibitem{kd}
+	G. Parsa.(2015) Document Classification \url{http://www.kdnuggets.com/2015/01/text-analysis-101-document-classification.html}
+\bibitem{stopwords}
+	Dropping common stop words \url{http://nlp.stanford.edu/IR- book/html/htmledition/dropping-common-terms-stop-words-t1.html}
+\bibitem{porter}
+	M.F. Porter. (2001). Stemming Algorithm \textit{Snowball: A Language for Stemming Algorithms}
+\bibitem{pos}
+ Part of Speech Tagging.(2016). \url{http://en.wikipedia.org/wiki/Part-of-speech tagging}
+ \bibitem{vector}
+Textual data and vector space model. \url{http://www.calpoly.edu/~dsun09/lessons/textprocessing}
+
+\bibitem{naive}
+	Naive Bayes text classification. \url{https://nlp.stanford.edu/IR-book/html/htmledition/naive-bayes-text-classification-1.html}
+
+\bibitem{additive}
+	Additive Smoothing. \url{https://en.wikipedia.org/wiki/Additive_smoothing}
+
+\bibitem{cross}
+Cross Validation. \url{https://www.cs.cmu.edu/~schneide/tut5/node42.html}
+\bibitem{analysis}
+Data Analysis. \url{https://www.ngdata.com/what-is-data-analysis}
+
+\bibitem{rdef}
+ Recommnder System. \url{http://recommender-system.blogspot.com/2012_10_01_archive.html}
   \bibitem{ng}
   Andrew Ng. (2016). Machine Learning [Video lectures].
   Retrieved July, 2016 from \url{https://www.coursera.org/learn/machine-learning}.
