--- a/major_project_report/main.tex
+++ b/major_project_report/main.tex
@@ -36,7 +36,7 @@
 \listoftables \addcontentsline{toc}{section}{List of Tables}
 
 
-\input{sec/logistic-regression}
+%\input{sec/logistic-regression}
 \input{sec/introduction}
 \input{sec/literature_review}
 \input{sec/theoretical_background}
