--- a/major_project_report/sec/introduction.tex
+++ b/major_project_report/sec/introduction.tex
@@ -1,4 +1,80 @@
 \newpage
 \pagenumbering{arabic}
 \section{INTRODUCTION}
+On the Internet, where the number of choices is overwhelming, there is need to filter, prioritize and efficiently deliver relevant information in order to alleviate the problem of information overload, which has created a potential problem to many Internet users. Recommender systems solve this problem by searching through large volume of dynamically generated information to provide users with personalized content and services. 
 
+Besides, these days social networks have become widely used and popular mediums for information dissemination as well as the facilitators of social interactions. User contribution and acitivites provide a valueable insight into individual behavior, experiences, opinions and interests.Considering that personality, which uniquely identifies each one of us, affects a lot of aspects of human behavior, mental process and affective reactions, there is an enormous opportunities, for adding new personality based qualities in order to enhance the current collaborative filtering recommendation engine.
+
+Pervious work has shown that the information in user's social media account is reflective of their actual personalities, not an idealized version of themselves which makes a broad user base social networking site Facebook, an ideal platform in order to study the personality traits of an user. Several well studied personality models have been proposed, among which the "Big Five Model" as known as "Five Factor Model"(FFM) is the most popular one (Goldberg 1992)\cite{fivefactormodel}.
+
+\subsection{BACKGROUND}
+The Big Five Model of personality dimensions has emerged as one of the most well-researched and well-regarded measures of personality structure in recent yeas \cite{fivefactormodel}. The model five domains of personality: Openness, Conscientiousness, Extroversion, Agreeableness and Neuroticism, were conceived by Tupes and Christal \cite{tupes} as the fundamental traits that emerged from analyses of previous personality tests. McCrae, Costa and John \cite{mccrae} continued five factor model research and consistently found generality across age, gender and cultural lines.
+The Big Five Model traits are characterized by the following:
+\begin{enumerate}
+	\item Openness to Experience: Openness is a general appreciation of art, emotion, adventure, unusual ideas, imagination, curiosity, and variety of experience. The tend to be more creative and more aware of their feelings.They are also most likely to hold unconventional beliefs.
+Some sample items used by person with this traits are:
+\begin{itemize}
+	\item I have an excellent ideas.
+	\item I am quick to understand things.
+	\item I am full of ideas.
+\end{itemize}
+\item Conscientiousness: Conscientiousness is a tendency to display self-discipline, act dutifully and strive for achievement againts measures or outside expectations. It is related to the way in which people control, regulate and direct thier impules.The level of conscientiousness rises among young adults and then declines among older adults.
+Some sample items used by person with this traits are:
+\begin{itemize}
+	\item I follow a schedule.
+	\item I am exact in my work.
+	\item I am always prepared.
+\end{itemize}
+\item Extraversion: Extraversion is characterized by breadth of activities, surgency from external activity/situations and energy creation from external means. Extraverts enjoy interacting with people and are often perceived as full of energy. They tend to be enthusiastic, action-oriented indivduals. They posses high group visibililty, like to talk and assert themselves.
+Some sample items used by person with this traits are:
+\begin{itemize}
+	\item I love the life of the party.
+	\item I don't mind being the center of attention.
+	\item I feel comfortable around the people.
+\end{itemize}
+\item Agreeableness: The agreeableness trait reflects individual differences in general concern for social harmony. Agreeable individuals value getting along with others. They are generally considerate, kind, generous, trusting and trustworthy, helpful and willing to compromise their interests with others. They also have optimistic view of human nature.
+Some sample items used by person with this traits are:
+\begin{itemize}
+	\item I have a soft heart.
+	\item I am interested in people.
+	\item I take time out for others.
+\end{itemize}
+\item Neuroticism: Neuroticism is the tendency to experience negative emotions, such as anger, anxiety or depression.
+\begin{itemize}
+	\item I get irritated easily.
+	\item I get stressed out easily.
+	\item I get upset easily.
+\end{itemize}
+\end{enumerate}
+\subsection{MOTIVATION}
+The growth in the amount of digital information and the number of visitors ot the Internet have created a potential challenge of information overload which hinders timely access to items of interest on the Internet. Thus there has been increased in the demand for the best recommender system more than ever before. And music is essential to many of our lives. We listen to it whenwaking up, while in transit at work, and with our friends. For many, music is like a constant companion. It can bring us joy and motivate us, accompany us through difficult times and alleviate our worries. Hence music is much more than mere entertainment, but as stated earlier, growth in the amount of digital information have created a potential challenge of information overload where a recommendation engine plays a very crucial role in filtering the vital fragment out of large amount of dynamically generated information according to user's preferences, interest or observed behavior about item. 
+Hence,with this project, we attempt to devise a method to improve the collaborative filtering engine via the use of personality in order to compute the similar user's for the recommendation of music as it is believed, person with similar personality has similar tast in music. 
+
+\subsection{OBJECTIVES}
+The objectives of the project can be summarized with the points below:
+\begin{enumerate}
+\item To find out if the personality of the user can be a curical factor in the music recommendation system.
+\item To find out if collaborative recommendation engine can be enhanced via the use of personality for similar user computation.
+\end{enumerate}
+
+\subsection{PROBLEM STATEMENT}
+
+\subsection{SCOPE OF THE PROJECT}
+The most important scope of the project will be to discover if the personality traits of an individual can be used for the enhancement of the recommendation engine in order to provide the more personalized content to the user asa recommendation.
+
+\subsection{UNDERSTANDING OF REQUIREMENT}
+Nowadays, digital data on the internet has been massive than ever, which have created a potential challenge of information overload, hindering timely access of items of interest on the Internet. So, there is a requirement for the better recommendation system than ever. Thus with this project, we will try to find out if the recommendation engine can perform better if personalityof the individual is used as one of the metrics for a recommendation. Nowadays, social networking sites have become vastly popular among several people of different religion, caste, ethnic groups and different location of the world, which shows how culturally diverse the people around the world is. And in this diversity, we can also see the varities in the personalities of people living in different parts of the world. The main purpose of the social nenetworking sites are to connect different peoples from different parts of ththe world which makes it the most suitable platform in order to study the personality traits of the user. Thus studied personality traits can be used inrecommendation engine in order to improve it's efficiency and with it's project we aim to prove that indeed the personality can be used to do so.
+
+\subsection{ORGANIZATION OF REPORT}
+The organization of the report is done in the following ways:
+\begin{enumerate}
+\item Chapter 1: It includes the introduction about the problem and the method we are trying to employ to solve. 
+\item Chapter 2: It includes Literature Review which includes the works related to the project and the noteable works prevailing prior to this project development with their results.
+\item Chapter 3: It includes the theoritical background for the development of the project.
+\item Chapter 4: It includes methodology used for the developement of the project.
+\item Chapter 5: It includes system design techniques along with the use case, activity diagram used for the development of the system.
+\item Chapter 6: It includes the system analysis, which briefly explains about the functional and non-functional requirements of the system.
+\item Chapter 7: It includes tools and technologies used for the development of the system.
+\item Chapter 8: It includes the analysis and the result of the experiment we tried in the project.
+\item Chapter 9: It includes the conclusion and future enhancements techniques.
+\end{enumerate}
